feat: QuerybalanceUseCase Implementation